feat:added messaging functionality and user following
