# user-service/docs/swagger.json
@@ -9,6 +9,46 @@
     "host": "localhost:8081",
     "basePath": "/",
     "paths": {
+        "/messages": {
+            "post": {
+                "description": "Send a new message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Send a message",
+                "parameters": [
+                    {
+                        "description": "Message",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Messages"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.SendMessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Get user details by id, username, or email",
@@ -43,7 +83,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.Users"
                         }
                     },
                     "404": {
@@ -73,7 +113,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.Users"
                         }
                     }
                 ],
@@ -92,6 +132,46 @@
                     }
                 }
             }
+        },
+        "/users/follow": {
+            "get": {
+                "description": "Create a folloing entry between two users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "following"
+                ],
+                "summary": "follow user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Follower ID",
+                        "name": "follower",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Following"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -102,7 +182,7 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/models.User"
+                    "$ref": "#/definitions/models.Users"
                 }
             }
         },
@@ -114,17 +194,52 @@
                 }
             }
         },
-        "models.User": {
+        "models.Following": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "followedID": {
+                    "type": "integer"
+                },
+                "followerID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Messages": {
+            "type": "object",
+            "properties": {
+                "content": {
                     "type": "string"
                 },
+                "status": {
+                    "type": "string"
+                },
+                "userFromId": {
+                    "type": "integer"
+                },
+                "userToId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.SendMessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "$ref": "#/definitions/models.Messages"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Users": {
+            "type": "object",
+            "properties": {
                 "email": {
                     "type": "string"
                 },
                 "name": {
-                    "description": "gorm.Model",
                     "type": "string"
                 },
                 "password": {
@@ -134,9 +249,6 @@
                     "type": "integer"
                 },
                 "status": {
-                    "type": "string"
-                },
-                "updatedAt": {
                     "type": "string"
                 },
                 "username": {
