# user-service/models/messages.go
@@ -2,18 +2,21 @@ package models
 
 import (
 	"time"
-
-	"gorm.io/gorm"
 )
 
 type Messages struct {
-	gorm.Model
+	Id         uint   `json:"-" gorm:"primarykey"`
 	Content    string `json:"content"`
 	UserFromId uint
 	UserToId   uint
-	UserFrom   User      `gorm:"foreignkey:UserFromId" json:"from"`
-	UserTo     User      `gorm:"foreignkey:UserToId" json:"to"`
+	UserFrom   Users     `gorm:"foreignKey:UserFromId;references:ID" json:"-"`
+	UserTo     Users     `gorm:"foreignKey:UserToId;references:ID" json:"-"`
 	Status     string    `json:"status"`
-	SentAt     time.Time `json:"sentAt"`
-	ReceivedAt time.Time `json:"receivedAt"`
+	SentAt     time.Time `json:"-" gorm:"autoCreateTime"`
+	ReceivedAt time.Time `json:"-" gorm:"autoUpdateTime"`
+}
+
+type SendMessageResponse struct {
+	Status string   `json:"status"`
+	User   Messages `json:"message"`
 }
