# user-service/models/users.go
@@ -2,23 +2,21 @@ package models
 
 import (
 	"time"
-
-	"gorm.io/gorm"
 )
 
-type User struct {
-	gorm.Model
-	Name      string    `json:"name" gorm:"tableName:users"`
-	UserName  string    `json:"username"`
-	Email     string    `json:"email"`
-	Phone     uint      `json:"phone"`
+type Users struct {
+	ID        uint      `json:"-" gorm:"primarykey"`
+	Name      string    `json:"name"`
+	UserName  string    `json:"username" gorm:"uniqueIndex"`
+	Email     string    `json:"email" gorm:"uniqueIndex"`
+	Phone     int16     `json:"phone" gorm:"uniqueIndex"`
 	Status    string    `json:"status"`
 	Password  string    `json:"password"`
-	CreatedAt time.Time `json:"createdAt"`
-	UpdatedAt time.Time `json:"updatedAt"`
+	CreatedAt time.Time `json:"-" gorm:"autoCreateTime"`
+	UpdatedAt time.Time `json:"-" gorm:"autoUpdateTime"`
 }
 
 type CreateUserResponse struct {
 	Status string `json:"status"`
-	User   User   `json:"user"`
+	User   Users  `json:"user"`
 }
